<resources>
    <string name="app_name">aUSm</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Register</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign up</string>
    <string name="log_in_prompt">Already have an account? Log in</string>
    <string name="field_missing">Please fill in all the fields</string>
    <string name="login_success">Successfully logged in</string>
    <string name="login_failure">Login failed</string>
    <string name="signup_success">Successfully registered</string>
    <string name="signup_failure">Registration failed</string>
    <string name="email_missing">Please fill in your email</string>
    <string name="email_reset_success">Reset link sent to email successfully</string>
    <string name="email_reset_failure">Unable to send reset email</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_name">#NAME</string>
    <string name="drawer_email">#EMAIL</string>
    <string name="alert_logout_title">Log Out</string>
    <string name="alert_logout_message">You will be returned to the login screen.</string>
    <string name="alert_logout_positive">Log Out</string>
    <string name="alert_logout_negative">Cancel</string>
    <string name="tab_gps">GPS Tracker</string>
    <string name="tab_reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="review_option_1">Not at all</string>
    <string name="review_option_2">Slightly</string>
    <string name="review_option_3">Moderately</string>
    <string name="review_option_4">Very</string>
    <string name="review_option_5">Extremely</string>
    <string name="review_category_noise">How noisy is this place?</string>
    <string name="review_category_crowd">How crowded is this place?</string>
    <string name="review_category_overall">How would you rate this place overall?</string>
    <string name="text_area_review">Review</string>
    <string name="save_changes">Save Changes</string>
    <string name="missing_choice_noise">Please select a noise level</string>
    <string name="missing_choice_crowd">Please select a crowd level</string>
    <string name="missing_rating_overall">Please give an overall rating</string>
    <string name="connection_failed">Failed to establish a connection to the server</string>
    <string name="review_already_exists">Cannot review the same place twice</string>
    <string name="add_review_success">Review successfully added</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="website">Website</string>
    <string name="info_unavailable">Information unavailable</string>
    <string name="call_unavailable">Phone number unavailable</string>
    <string name="website_unavailable">Website unavailable</string>
</resources>
