<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_review_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/add_review"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/ReviewTextView"
                android:text="@string/review_category_noise" />

            <HorizontalScrollView
                style="@style/ReviewHorizontalScrollView">

                <com.google.android.material.chip.ChipGroup
                    style="@style/ReviewChipGroup">

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_1" />

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_2" />

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_3" />

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_4" />

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_5" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <View
                style="@style/ReviewDivider" />

            <TextView
                style="@style/ReviewTextView"
                android:text="@string/review_category_crowd" />

            <HorizontalScrollView
                style="@style/ReviewHorizontalScrollView">

                <com.google.android.material.chip.ChipGroup
                    style="@style/ReviewChipGroup">

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_1" />

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_2" />

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_3" />

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_4" />

                    <com.google.android.material.chip.Chip
                        style="@style/ReviewChip"
                        android:text="@string/review_option_5" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <View
                style="@style/ReviewDivider" />

            <TextView
                style="@style/ReviewTextView"
                android:text="@string/review_category_overall" />

            <RatingBar
                style="@style/ReviewRatingBar" />

            <View
                style="@style/ReviewDivider" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ReviewTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/ReviewTextInputEditText"
                    android:hint="@string/text_area_review" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                style="@style/ReviewDivider" />

            <Button
                style="@style/ReviewButton"
                android:text="@string/add_review"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>