<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_review_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/edit_review"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                style="@style/ReviewTextView"
                android:text="@string/review_category_noise" />

            <HorizontalScrollView
                style="@style/ReviewHorizontalScrollView">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/noise_chip_group"
                    style="@style/ReviewChipGroup">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/noise_chip_1"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/noise_chip_2"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_2" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/noise_chip_3"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_3" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/noise_chip_4"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_4" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/noise_chip_5"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_5" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <View
                style="@style/ReviewDivider" />

            <TextView
                style="@style/ReviewTextView"
                android:text="@string/review_category_crowd" />

            <HorizontalScrollView
                style="@style/ReviewHorizontalScrollView">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/crowd_chip_group"
                    style="@style/ReviewChipGroup">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/crowd_chip_1"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/crowd_chip_2"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_2" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/crowd_chip_3"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_3" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/crowd_chip_4"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_4" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/crowd_chip_5"
                        style="@style/ReviewChip"
                        android:text="@string/review_option_5" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <View
                style="@style/ReviewDivider" />

            <TextView
                style="@style/ReviewTextView"
                android:text="@string/review_category_overall" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/overall_rating_bar"
                style="@style/ReviewRatingBar" />

            <View
                style="@style/ReviewDivider" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ReviewTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/review_text_input"
                    style="@style/ReviewTextInputEditText"
                    android:hint="@string/text_area_review" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                style="@style/ReviewDivider" />

            <Button
                android:id="@+id/edit_review_button"
                style="@style/ReviewButton"
                android:text="@string/save_changes"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>