<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/email_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_0.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_0.9"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/password_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_0.9"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_0.1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_0.9"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_0.1"
        app:layout_constraintTop_toBottomOf="@+id/password_text_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>